# resumidor-pdfs

.github/workflows/: python-app.yml
resumidor_pdfs/: Articles-blog.md  IEDEReport-LearningFormatted-blog.md  README.md  blog.md  life-in-space-blog.md  pyproject.toml  report.md
resumidor_pdfs/src/resumidor_pdfs/: crew.py  main.py
resumidor_pdfs/src/resumidor_pdfs/config/: agents.yaml  tasks.yaml
resumidor_pdfs/src/resumidor_pdfs/tools/: custom_tool.py
